tests/negative/Internal/UnsolvedMeta.juvix
module UnsolvedMeta;

inductive Proxy (A : Type) {
  x : Proxy A;
};

t : Proxy _;
t := x;

end;
